# piruetas

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  COMMERCIAL_LICENSE.md  CONFIGURATION.md  Dockerfile  README.md  compose.yml  justfile  package-lock.json  package.json  pyproject.toml
.forgejo/workflows/: ci.yml  docker.yml  release.yml
app/: auth.py  csrf.py  database.py  dependencies.py  export.py  i18n.py  main.py  models.py  rate_limit.py  recovery.py  recovery_flash.py  settings.py  tasks.py  templates_config.py
app/routers/: account.py  admin.py  auth.py  journal.py  upload.py
app/static/css/: base.css  calendar.css  editor.css  export-bundle.css  landing.css  layout.css  main.css  reset.css  responsive.css  tokens.css
app/static/fonts/: fonts.css
app/static/js/: admin-users.js  auth.js  calendar.js  data.js  demo-banner.js  editor.js  focus-trap.js  (+4 more)
app/templates/: account.html  base.html  index.html  journal.html  layout.html  login.html  macros.html  privacy.html  share.html  signup.html  signup_closed.html  terms.html
scripts/: build-tiptap.mjs  reset_demo_password.py  seed_admin.py  take_screenshots.py  tiptap-entry.js
tests/: conftest.py  test_account.py  test_admin.py  test_auth.py  test_database.py  test_entries.py  test_main.py  test_recovery.py  test_recovery_routes.py  test_security.py  test_settings.py  test_tasks.py  test_templates_config.py
tests/e2e/: conftest.py  test_account.py  test_admin.py  test_auth.py  test_data_management.py  test_demo_banner.py  test_journal.py  test_landing.py  test_registration.py  test_sharing.py
(+27 files in other folders)
